Sat Sep 26 03:46:57 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for addition of XAPIAN_DOCID_BASE_TYPE and
	  XAPIAN_TERMCOUNT_BASE_TYPE.

Fri Jun 05 12:42:41 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for optional reference counting of
	  MatchSpy.

Mon Jun 01 13:14:40 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.3.3.

Mon Jun 01 11:52:12 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri May 29 07:31:12 GMT 2015  Olly Betts <olly@survex.com>

	* python/smoketest.py: Add new testcase to catch any internal
	  functions, methods, constants, etc which have accidentally been
	  wrapped.

Fri May 29 07:30:20 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore new internal sortable_serialise_()
	  function.

Fri May 29 07:25:17 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore internal methods of Xapian::Weight.

Wed May 27 03:07:15 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue May 26 23:17:09 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Credit people for the #616-related improvements in 1.3.2.

Mon May 25 10:03:24 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: SWIG now automatically
	  makes xapian.Error a subclass of the Python Exception class, so
	  drop our post-processing tweak to add this in.

Mon May 25 09:58:30 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Eliminate 'modern'
	  subdirectory - we haven't generated a non-modern variant of the
	  python bindings for ages.

Mon May 25 05:59:49 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Fix Makefile comment typo.

Sun May 24 13:07:47 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix configure test for whether $CLI can run CSharp
	  programs - previously it would always fail, which would mean that