@@ -140,7 +140,7 @@ for the bindings, but it would be good to have.  Here are some notes on how
 this could be achieved for various languages we support:
 
   * PHP 5.3 added an E_USER_DEPRECATED error level, and we now require at
-    least 5.4.  If we wanted to backport this to 1.2, we could use
+    least 5.5.  If we wanted to backport this to 1.2, we could use
     E_USER_NOTICE there instead, by putting this near the start of xapian.php::
 
       define('XAPIAN_DEPRECATED',defined(E_USER_DEPRECATED)?E_USER_DEPRECATED:E_USER_NOTICE);
